--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 									<i class='bx bxs-alarm-exclamation'></i>
 									<span class="text">
 										<h2>National Disaster Risk Reduction Management Council</h2>
-										<p>Emergency Shits</p>
+										<p>Emergency Services</p>
 										<p>(02) 911-5061 | (02) 911-5062 | (02) 911-5063</p>
 										<p>(02) 911-5064 | (02) 911-5065 | (02) 911-1406</p>
 										<p>(02) 911-1873 | (02) 912-2665 | (02) 912-5668</p>
